--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bulma": "^0.7.2",
     "bulma-extensions": "^3.0.0",
     "bulma-quickview": "^2.0.0",
+    "chalk": "^2.4.1",
     "compression": "^1.7.3",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.3",
@@ -55,6 +56,7 @@
     "passport-local": "^1.0.0",
     "power-assert": "^1.6.1",
     "pug": "^2.0.3",
+    "response-time": "^2.3.2",
     "rimraf": "^2.6.2",
     "vue-native-websocket": "^2.0.12"
   },
@@ -64,10 +66,18 @@
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-power-assert": "^2.0.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.0.0",
     "cross-spawn": "5.1.0",
