--- a/package.json
+++ b/package.json
@@ -46,16 +46,16 @@
     "lusca": "^1.6.1",
     "method-override": "^3.0.0",
     "methods": "~1.1.2",
-    "mongoose": "^5.4.0",
+    "mongoose": "^5.4.2",
     "morgan": "^1.9.1",
-    "node": "^11.5.0",
+    "node": "^11.6.0",
     "nodemailer": "4.0.1",
     "nodemailer-html-to-text": "2.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "power-assert": "^1.6.1",
     "response-time": "^2.3.2",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "autoprefixer": "7.1.1",
@@ -90,7 +90,7 @@
     "file-loader": "^0.11.1",
     "json-loader": "^0.5.4",
     "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "4.5.3",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -105,7 +105,7 @@
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
     "uuid": "^3.0.1",
-    "vee-validate": "^2.1.4",
+    "vee-validate": "^2.1.5",
     "vue": "^2.5.21",
     "vue-auto-routing": "^0.3.0",
     "vue-form-generator": "2.0.0-beta1",
@@ -117,8 +117,8 @@
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.4.2",
     "vuex-router-sync": "^5.0.0",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3",
