--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "client:devserver": "webpack-dev-server --inline --hot",
     "client:build": "cross-env NODE_ENV=production FORCE_COLOR=1 webpack --progress --hide-modules",
     "client:pre-build": "webpack --progress --hide-modules --hot --watch --config webpack.config.js",
-    "clean:assets": "rimraf public/assets/css && rimraf public/assets/js",
+    "clean:assets": "rimraf public/themes/basetheme/assets",
     "express:dev": "cross-env NODE_ENV=development FORCE_COLOR=1 nodemon present.js",
     "express:prod": "cross-env NODE_ENV=production FORCE_COLOR=1 nodemon present.js",
     "full:dev": "npm-run-all --sequential clean:assets client:pre-build",
@@ -59,6 +59,7 @@
     "vue-route-generator": "^0.3.3"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "autoprefixer": "7.1.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
@@ -89,6 +90,8 @@
     "eslint-plugin-standard": "^2.0.1",
     "eslint-plugin-vue": "~4.2.2",
     "file-loader": "^0.11.1",
+    "handlebars-loader": "^1.7.1",
+    "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.4",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.11.0",
@@ -119,7 +122,7 @@
     "vuex-persistedstate": "^2.4.2",
     "vuex-router-sync": "^5.0.0",
     "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.0",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3",
