--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
     "presets": ["es2015", "es2016", "es2017", "stage-0"],
-    "plugins": ["transform-flow-strip-types"]
+    "plugins": ["transform-flow-strip-types", "babel-plugin-syntax-dynamic-import"]
   }
   
