--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "fs-extra": "^7.0.1",
+    "helmet": "^3.15.0",
     "http-status": "^1.3.1",
     "install": "^0.12.2",
     "lusca": "^1.6.1",
